<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="@color/steampBlue"
	>
	<LinearLayout
    	android:focusable="true"
    	android:focusableInTouchMode="true"
    	android:layout_width="0px" 
    	android:layout_height="0px"
    	/>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		android:orientation="vertical"
	    android:layout_marginLeft="30sp"
		android:layout_marginRight="30sp"
		android:gravity="center"
	    >
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginBottom="30sp"
		    >
			<com.michaelnovakjr.numberpicker.NumberPicker
	            android:id="@+id/num_picker"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent" 
	            android:layout_weight="1"
	            />
			<Button 
				android:id="@+id/show_chronometers_bt"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1"
				android:text="@string/go_to_stopwatch"
				android:textStyle="bold"
				android:gravity="center"
				/>
		</LinearLayout>
		<Button 
			android:id="@+id/saved_times_bt"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/saved_times_bt"
			android:textStyle="bold"
			android:gravity="center"
			android:layout_marginBottom="20sp"
			/>
		<Button 
			android:id="@+id/rate_bt"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/rate_app"
			android:textStyle="bold"
			android:layout_marginBottom="20sp"
			/>
		<Button 
			android:id="@+id/email_bt"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/message_appel_bt"
			android:textColor="@color/orange"
			android:textStyle="bold"
			/>
		<TextView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/message_appel"
			android:textColor="@color/white"
			android:textSize="17sp"
			/>
	</LinearLayout>
</LinearLayout>